--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Curriculum Vitæ de Ludovic CARRIL - Développeur web et web mobile</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Ludovic CARRIL</h1>
+        <p>Développeur Web et Web Mobile</p>
+        <address>
+            <p>ludo.agtm@outlook.fr</p>
+            <p>06 06 06 06 06</p>
+            <p>Savoie</p>
+            <p>Permis B, D</p>
+        </address>
+    </header>
 </body>
 </html>
