Add main and informations

--- a/index.html
+++ b/index.html
@@ -16,5 +16,75 @@
             <p>Permis B, D</p>
         </address>
     </header>
+    <main>
+        <div>
+            <section>
+                <h2>Compétences</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>PHP</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Langues</h2>
+                <ul>Français : Langue maternelle</ul>
+                <ul>Anglais : Niveau B1</ul>
+            </section>
+            <section>
+                <h2>Qualités</h2>
+                <ul>
+                    <li>Autonome</li>
+                    <li>Investi</li>
+                    <li>Rigoureux</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Centres d'intérêt</h2>
+                <ul>
+                    <li>Animaux</li>
+                    <li>Informatique / Jeux Vidéos</li>
+                    <li>Randonnées / Vélo</li>
+                    <li>Monde du transport</li>
+                </ul>
+            </section>
+        </div>
+        <div>
+            <section>
+                <h2>Profil</h2>
+                <p>Après 10 ans au sein d'une exploitation en transports de voyageurs (8 ans tant que chargé de planning, puis 2 ans responsable de site), je suis en pleine reconvertion professionnelle.</p>
+                <p>Passionné de transport et d'informatiques, je développe depuis 7 ans un projet personnel : un jeu en ligne sur navigateur sur le domaine des transports. Devenir développeur web est devenu pour moi une évidence.</p>
+            </section>
+            <section>
+                <h2>Formations</h2>
+                <ul>
+                    <li>Titre Professionnel Développeur Web et Web Mobile : 2024/2025<br>
+                    Centre Europpéen de Formation</li>
+                    <li>FIMO Voyageurs : 2016<br>
+                    AFRAL Fontaine (38)</li>
+                    <li>Attestation de capacité voyageurs : 2013<br>
+                    DREAL Rhône-Alpes</li>
+                    <li>Titre Professionnel Technicien Supérieur Transport de Personnes : 2012-2013<br>
+                    AFTRAL Villette d'Anthon (38)</li>
+                    <li>Baccalauréat Technologique STI GMA : 2012<br>
+                    Lycée Monge</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Expériences professionnelles</h2>
+                <ul>
+                    <li>Développeur Web full-stack : Depuis 2017<br>
+                    https://transport-manager.net</li>
+                    <li>Chef de Centre : 2023-2025<br>
+                    Transdev Savoie</li>
+                    <li>Responsable Planning : 2014-2022<br>
+                    Transdev Savoie</li>
+                    <li>Assistant d'Exploitation en apprentissage (alternant) : 2012-2013<br>
+                    SEM VFD</li>
+                </ul>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
