--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitæ de Ludovic CARRIL - Développeur web et web mobile</title>
+    <link rel="shortcut icon" type="image/ico" href="../assets/img/favicon.ico">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
     <header>
@@ -17,7 +19,7 @@
         </address>
     </header>
     <main>
-        <div>
+        <div class="profile">
             <section>
                 <h2>Compétences</h2>
                 <ul>
@@ -50,7 +52,7 @@
                 </ul>
             </section>
         </div>
-        <div>
+        <div class="cv-details">
             <section>
                 <h2>Profil</h2>
                 <p>Après 10 ans au sein d'une exploitation en transports de voyageurs (8 ans tant que chargé de planning, puis 2 ans responsable de site), je suis en pleine reconvertion professionnelle.</p>
