Add photo and start layout header

--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 </head>
 <body>
     <header>
-        <h1>Ludovic CARRIL</h1>
-        <p>Développeur Web et Web Mobile</p>
-        <address>
-            <p>ludo.agtm@outlook.fr</p>
-            <p>06 06 06 06 06</p>
-            <p>Savoie</p>
-            <p>Permis B, D</p>
-        </address>
+        <div class="photo">
+            <img src="../assets/img/photo-Ludovic-CARRIL.jpg" alt="Photo de profil de Ludovic CARRIL">
+        </div>
+        <div class="header-contact">
+            <h1>Ludovic CARRIL</h1>
+            <p class="search-post">Développeur Web et Web Mobile</p>
+            <address>
+                <p>ludo.agtm@outlook.fr</p>
+                <p>06 06 06 06 06</p>
+                <p>Savoie</p>
+                <p>Permis B, D</p>
+            </address>
+        </div>
     </header>
     <main>
         <div class="profile">
