--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <h1>Ludovic CARRIL</h1>
             <p class="search-post">Développeur Web et Web Mobile</p>
             <address>
-                <p><a href="mailto:ludo.agtm@outlook.fr">ludo.agtm@outlook.fr</a></p>
-                <p><a href="tel:0606060606">06 06 06 06 06</a></p>
-                <p><a href="https://www.google.fr/maps/place/Savoie/@45.4941727,5.7443825,195031m/data=!3m2!1e3!4b1!4m6!3m5!1s0x478bd21efc2354d3:0x308ab2ae4b92a10!8m2!3d45.4932045!4d6.4724!16zL20vMG0wZDY?entry=ttu&g_ep=EgoyMDI0MTAxNS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Savoie</a></p>
-                <p>Permis B, D</p>
+                <p><a href="mailto:ludo.agtm@outlook.fr"><img class="head-icon" src="/assets/img/email.svg"> ludo.agtm@outlook.fr</a></p>
+                <p><a href="tel:0606060606"><img class="head-icon" src="/assets/img/phone.svg"> 06 06 06 06 06</a></p>
+                <p><a href="https://www.google.fr/maps/place/Savoie/@45.4941727,5.7443825,195031m/data=!3m2!1e3!4b1!4m6!3m5!1s0x478bd21efc2354d3:0x308ab2ae4b92a10!8m2!3d45.4932045!4d6.4724!16zL20vMG0wZDY?entry=ttu&g_ep=EgoyMDI0MTAxNS4wIKXMDSoASAFQAw%3D%3D" target="_blank"><img class="head-icon" src="/assets/img/adress.svg"> Savoie</a></p>
+                <p><img class="head-icon" src="/assets/img/car.svg"> Permis B, D</p>
             </address>
         </div>
     </header>
