Add comment and finish layout header

--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
         <div class="photo">
             <img src="../assets/img/photo-Ludovic-CARRIL.jpg" alt="Photo de profil de Ludovic CARRIL">
         </div>
+        <!-- Ajout de header dans le bloc header-contact et mise en forme sous flex -->
         <div class="header-contact">
-            <h1>Ludovic CARRIL</h1>
-            <p class="search-post">Développeur Web et Web Mobile</p>
-            <address>
-                <p><a href="mailto:ludo.agtm@outlook.fr"><img class="head-icon" src="/assets/img/email.svg"> ludo.agtm@outlook.fr</a></p>
-                <p><a href="tel:0606060606"><img class="head-icon" src="/assets/img/phone.svg"> 06 06 06 06 06</a></p>
-                <p><a href="https://www.google.fr/maps/place/Savoie/@45.4941727,5.7443825,195031m/data=!3m2!1e3!4b1!4m6!3m5!1s0x478bd21efc2354d3:0x308ab2ae4b92a10!8m2!3d45.4932045!4d6.4724!16zL20vMG0wZDY?entry=ttu&g_ep=EgoyMDI0MTAxNS4wIKXMDSoASAFQAw%3D%3D" target="_blank"><img class="head-icon" src="/assets/img/adress.svg"> Savoie</a></p>
-                <p><img class="head-icon" src="/assets/img/car.svg"> Permis B, D</p>
-            </address>
+            <div>
+                <h1>Ludovic CARRIL</h1>
+            </div>
+            <div>
+                <p class="search-post">Développeur Web et Web Mobile</p>
+            </div>
+            <div>
+                <!-- Le tél est faux, l'adresse est vague, le mail est vrai (mail pro pour développement) -->
+                <address>
+                    <p><a href="mailto:ludo.agtm@outlook.fr"><img class="head-icon" src="/assets/img/email.svg" alt="Icone pour email"> ludo.agtm@outlook.fr</a></p>
+                    <p><a href="tel:0606060606"><img class="head-icon" src="/assets/img/phone.svg" alt="Icone pour téléphone"> 06 06 06 06 06</a></p>
+                    <p><a href="https://www.google.fr/maps/place/Savoie/@45.4941727,5.7443825,195031m/data=!3m2!1e3!4b1!4m6!3m5!1s0x478bd21efc2354d3:0x308ab2ae4b92a10!8m2!3d45.4932045!4d6.4724!16zL20vMG0wZDY?entry=ttu&g_ep=EgoyMDI0MTAxNS4wIKXMDSoASAFQAw%3D%3D" target="_blank"><img class="head-icon" src="/assets/img/adress.svg" alt="Icone pour adresse"> Savoie</a></p>
+                    <p><img class="head-icon" src="/assets/img/car.svg" alt="Icone pour les permis"> Permis B, D</p>
+                </address>
+            </div>
         </div>
     </header>
     <main>
