--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="profile">
             <section>
                 <h2>Compétences</h2>
+                <hr>
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
@@ -44,11 +45,15 @@
             </section>
             <section>
                 <h2>Langues</h2>
-                <ul>Français : Langue maternelle</ul>
-                <ul>Anglais : Niveau B1</ul>
+                <hr>
+                <ul>
+                    <li>Français : Langue maternelle</li>
+                    <li>Anglais : Niveau B1</li>
+                </ul>
             </section>
             <section>
                 <h2>Qualités</h2>
+                <hr>
                 <ul>
                     <li>Autonome</li>
                     <li>Investi</li>
@@ -57,6 +62,7 @@
             </section>
             <section>
                 <h2>Centres d'intérêt</h2>
+                <hr>
                 <ul>
                     <li>Animaux</li>
                     <li>Informatique / Jeux Vidéos</li>
@@ -68,11 +74,13 @@
         <div class="cv-details">
             <section>
                 <h2>Profil</h2>
+                <hr>
                 <p>Après 10 ans au sein d'une exploitation en transports de voyageurs (8 ans tant que chargé de planning, puis 2 ans responsable de site), je suis en pleine reconvertion professionnelle.</p>
                 <p>Passionné de transport et d'informatiques, je développe depuis 7 ans un projet personnel : un jeu en ligne sur navigateur sur le domaine des transports. Devenir développeur web est devenu pour moi une évidence.</p>
             </section>
             <section>
                 <h2>Formations</h2>
+                <hr>
                 <ul>
                     <li>Titre Professionnel Développeur Web et Web Mobile : 2024/2025<br>
                     Centre Europpéen de Formation</li>
@@ -88,6 +96,7 @@
             </section>
             <section>
                 <h2>Expériences professionnelles</h2>
+                <hr>
                 <ul>
                     <li>Développeur Web full-stack : Depuis 2017<br>
                     https://transport-manager.net</li>
