--- a/index.html
+++ b/index.html
@@ -32,24 +32,63 @@
         </div>
     </header>
     <main>
-        <div class="profile">
+        <aside class="profile">
             <section>
                 <h2>Compétences</h2>
                 <hr>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Javascript</li>
-                    <li>PHP</li>
-                </ul>
+                <div class="skills-list">
+                    <div class="skills">HTML</div> 
+                    <div class="skills-level">
+                        <img src="assets/img/star-solid.svg" class="skills-icon" alt="1 étoile">
+                        <img src="assets/img/star-solid.svg" class="skills-icon" alt="1 étoile">
+                        <img src="assets/img/star-solid.svg" class="skills-icon" alt="1 étoile">
+                        <img src="assets/img/star-solid.svg" class="skills-icon" alt="1 étoile">
+                        <img src="assets/img/star-regular.svg" class="skills-icon" alt="0 étoile">
+                    </div>
+                    <div class="skills">CSS</div> 
+                    <div class="skills-level">
+                        <img src="assets/img/star-solid.svg" class="skills-icon" alt="1 étoile">
+                        <img src="assets/img/star-solid.svg" class="skills-icon" alt="1 étoile">
+                        <img src="assets/img/star-solid.svg" class="skills-icon" alt="1 étoile">
+                        <img src="assets/img/star-regular.svg" class="skills-icon" alt="0 étoile">
+                        <img src="assets/img/star-regular.svg" class="skills-icon" alt="0 étoile">
+                    </div>
+                    <div class="skills">Javascript</div> 
+                    <div class="skills-level">
+                        <img src="assets/img/star-solid.svg" class="skills-icon" alt="1 étoile">
+                        <img src="assets/img/star-regular.svg" class="skills-icon" alt="0 étoile">
+                        <img src="assets/img/star-regular.svg" class="skills-icon" alt="0 étoile">
+                        <img src="assets/img/star-regular.svg" class="skills-icon" alt="0 étoile">
+                        <img src="assets/img/star-regular.svg" class="skills-icon" alt="0 étoile">
+                    </div>
+                    <div class="skills">PHP</div> 
+                    <div class="skills-level">
+                        <img src="assets/img/star-solid.svg" class="skills-icon" alt="1 étoile">
+                        <img src="assets/img/star-solid.svg" class="skills-icon" alt="1 étoile">
+                        <img src="assets/img/star-regular.svg" class="skills-icon" alt="0 étoile">
+                        <img src="assets/img/star-regular.svg" class="skills-icon" alt="0 étoile">
+                        <img src="assets/img/star-regular.svg" class="skills-icon" alt="0 étoile">
+                    </div>
+                </div>
             </section>
             <section>
                 <h2>Langues</h2>
                 <hr>
-                <ul>
-                    <li>Français : Langue maternelle</li>
-                    <li>Anglais : Niveau B1</li>
-                </ul>
+                
+                <div class="skills-list">
+                    <div class="language">Français</div> 
+                    <div>
+                        Langue maternelle
+                    </div>
+                    <div class="language">Anglais</div> 
+                    <div>
+                        Niveau B1
+                    </div>
+                    <div class="language">Espagnol</div> 
+                    <div>
+                        Notiobs
+                    </div>
+                </div>
             </section>
             <section>
                 <h2>Qualités</h2>
@@ -58,6 +97,7 @@
                     <li>Autonome</li>
                     <li>Investi</li>
                     <li>Rigoureux</li>
+                    <li>Esprit d'équipe</li>
                 </ul>
             </section>
             <section>
@@ -70,7 +110,7 @@
                     <li>Monde du transport</li>
                 </ul>
             </section>
-        </div>
+        </aside>
         <div class="cv-details">
             <section>
                 <h2>Profil</h2>
