--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
             <div>
                 <p class="search-post">Développeur Web et Web Mobile</p>
             </div>
-            <div>
-                <!-- Le tél est faux, l'adresse est vague, le mail est vrai (mail pro pour développement) -->
-                <address>
-                    <p><a href="mailto:ludo.agtm@outlook.fr"><img class="head-icon" src="/assets/img/email.svg" alt="Icone pour email"> ludo.agtm@outlook.fr</a></p>
-                    <p><a href="tel:0606060606"><img class="head-icon" src="/assets/img/phone.svg" alt="Icone pour téléphone"> 06 06 06 06 06</a></p>
-                    <p><a href="https://www.google.fr/maps/place/Savoie/@45.4941727,5.7443825,195031m/data=!3m2!1e3!4b1!4m6!3m5!1s0x478bd21efc2354d3:0x308ab2ae4b92a10!8m2!3d45.4932045!4d6.4724!16zL20vMG0wZDY?entry=ttu&g_ep=EgoyMDI0MTAxNS4wIKXMDSoASAFQAw%3D%3D" target="_blank"><img class="head-icon" src="/assets/img/adress.svg" alt="Icone pour adresse"> Savoie</a></p>
-                    <p><img class="head-icon" src="/assets/img/car.svg" alt="Icone pour les permis"> Permis B, D</p>
-                </address>
-            </div>
+             <!-- Le tél est faux, l'adresse est vague, le mail est vrai (mail pro pour développement) -->
+            <address>
+                <p><a href="mailto:ludo.agtm@outlook.fr" aria-label="Envoyer un email à Ludovic"><img class="head-icon" src="/assets/img/email.svg" alt="Icone pour email"> ludo.agtm@outlook.fr</a></p>
+                <p><a href="tel:0606060606" aria-label="Téléphoner à Ludovic"><img class="head-icon" src="/assets/img/phone.svg" alt="Icone pour téléphone"> 06 06 06 06 06</a></p>
+                <p><a aria-label="Voir où se situe Ludovic" href="https://www.google.fr/maps/place/Savoie/@45.4941727,5.7443825,195031m/data=!3m2!1e3!4b1!4m6!3m5!1s0x478bd21efc2354d3:0x308ab2ae4b92a10!8m2!3d45.4932045!4d6.4724!16zL20vMG0wZDY?entry=ttu&g_ep=EgoyMDI0MTAxNS4wIKXMDSoASAFQAw%3D%3D" target="_blank"><img class="head-icon" src="/assets/img/adress.svg" alt="Icone pour adresse"> Savoie</a></p>
+                <p><img class="head-icon" src="/assets/img/car.svg" alt="Icone pour les permis"> Permis B, D</p>
+            </address>
         </div>
     </header>
     <main>
@@ -149,6 +147,7 @@
                     </div>
                 </div>
             </section>
+            <!-- N'ayant jamais fait de stages mais ayant eu beaucoup plus de formations, je n'ai pas implémentés de partie l'e concernant -->
             <section>
                 <h2>Expériences professionnelles</h2>
                 <hr>
