Update responsive design

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <aside class="profile">
-            <section>
+            <section aria-label="skills">
                 <h2>Compétences</h2>
                 <hr>
                 <!-- Liste sous forme de div pour faire l'alignement avec flexbox -->
@@ -75,26 +75,26 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section aria-label="language">
                 <h2>Langues</h2>
                 <hr>
                 <!-- Liste sous forme de div pour faire l'alignement avec flexbox -->
                 <div class="skills-list">
                     <div class="language"><strong>Français</strong></div> 
-                    <div>
+                    <div class="language-level">
                         Langue maternelle
                     </div>
                     <div class="language"><strong>Anglais</strong></div> 
-                    <div>
+                    <div class="language-level">
                         Niveau B1
                     </div>
                     <div class="language"><strong>Espagnol</strong></div> 
-                    <div>
+                    <div class="language-level">
                         Notions
                     </div>
                 </div>
             </section>
-            <section>
+            <section aria-label="qualities">
                 <h2>Qualités</h2>
                 <hr>
                 <ul>
@@ -104,7 +104,7 @@
                     <li>Esprit d'équipe</li>
                 </ul>
             </section>
-            <section>
+            <section aria-label="interests">
                 <h2>Centres d'intérêt</h2>
                 <hr>
                 <ul>
@@ -116,13 +116,13 @@
             </section>
         </aside>
         <div class="cv-details">
-            <section>
+            <section aria-label="profil">
                 <h2>Profil</h2>
                 <hr>
                 <p class="profil-text">Après 10 ans au sein d'une exploitation en transports de voyageurs (8 ans tant que chargé de planning, puis 2 ans responsable de site), je suis en pleine reconvertion professionnelle.</p>
                 <p class="profil-text">Passionné de transport et d'informatiques, je développe depuis 7 ans un projet personnel : un jeu en ligne sur navigateur sur le domaine des transports. Devenir développeur web est devenu pour moi une évidence.</p>
             </section>
-            <section>
+            <section aria-label="training">
                 <h2>Formations</h2>
                 <hr>
                 <div class="list-items-cv">
@@ -149,7 +149,7 @@
                 </div>
             </section>
             <!-- N'ayant jamais fait de stages mais ayant eu beaucoup plus de formations, je n'ai pas implémentés de partie l'e concernant -->
-            <section>
+            <section  aria-label="experiencies">
                 <h2>Expériences professionnelles</h2>
                 <hr>
                 <div class="list-items-cv">
